improve scroll calculations, fix z-index

--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -11,6 +11,7 @@ div.company-header{
     position: relative;
     top: 0px;
     left: 0px;
+    z-index: 2;
 
     div.company-name {
       padding-top: 10px;
